src/styles/Mobile.css
@media only screen and (max-width: 768px) {
	.layout-grid {
		grid-template-columns: 40px auto 40px;
		grid-template-rows: 250px 5fr;
		background-color: var(--white);
	}

	.layout-grid-container {
		min-height: 100vh;
		padding-bottom: 15rem;
	}

	.layout-grid-right {
		grid-template-columns: 40px auto 40px;
		grid-template-rows: 250px 5fr;
	}

	.layout-grid-both {
		grid-template-columns: 40px auto 40px;
		grid-template-rows: 250px 5fr;
	}

	.layout-content {
		grid-column: 2;
		grid-row: 1;
		z-index: 2
	}

	.layout-content-right {
		grid-column: 2;
		grid-row: 1;
	}

	.inner-content-container {
		width: fit-content;
		margin-top: 150px;
		overflow-y: scroll;
		scrollbar-width: none;
	}

	.inner-content-container::-webkit-scrollbar {
		display: none;
	}

	.banner-img {
		object-fit: cover;
		height: 100%;
		width: 100%;
		opacity: 0;
		transition-duration: 1.8s;
		transition-timing-function: cubic-bezier(.2, 1, .3, 1);
		transform: translateY(40px);
		z-index: -1;
	}

	.banner-mobile-overlay {
		background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(249, 249, 249, 1) 80%);
		height: 300px;
		width: 100%;
		position: absolute;
		top: 0;
		left: 0;
		z-index: 1;
	}

	.banner-container {
		grid-row: 1;
		grid-column: 1/4;
	}

	.banner-container-right {
		grid-row: 1;
		grid-column: 1/4;
	}

	.contact-section {
		padding-bottom: 6rem;
	}
}

